Fix alignment of Like button and switch entire rendering to client side

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -125,5 +125,9 @@ body {
 	cursor: pointer;
 }
 
+.actions .like-button{
+	margin-top:50px;
+}
+
 
 
